--- a/prepros-6.config
+++ b/prepros-6.config
@@ -1,5 +1,5 @@
 {
-  "name": "ba-starter-flex",
+  "name": "foliac",
   "firstRun": false,
   "exportConfig": true,
   "fileConfigs": [
@@ -24,9 +24,17 @@
     ],
     "hideUnwatchedFiles": false
   },
-  "imports": [],
+  "imports": [
+    {
+      "path": "style/app.scss",
+      "imports": [
+        "style/slick.scss",
+        "style/slick-theme.scss"
+      ]
+    }
+  ],
   "projectView": {
-    "selectedView": "settings"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
@@ -67,7 +75,7 @@
     "wp-includes"
   ],
   "server": {
-    "port": 7879,
+    "port": 7880,
     "assignNewPortAutomatically": true,
     "enable": true,
     "proxy": {
